--- a/build.xml
+++ b/build.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" ?>
-<project name="petclinic" basedir="../../../Desktop/Java Eğitimi/spring_framework/petclinic_initial_files" default="hsqldb.run.server">
+<project name="petclinic" basedir="." default="hsqldb.run.server">
 	
-	<property name="M2_HOME" location="/home/ksevindik"/>
+	<property name="M2_HOME" location="/Users/adurmaz"/>
 
 	<path id="build.classpath">
 		<fileset dir="${M2_HOME}/.m2/repository/org/hsqldb/hsqldb/2.2.9">
