--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,4 +4,39 @@
 
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
+    <context-param>
+        <param-name>contextConfigLocation</param-name>
+        <param-value>classpath*:/appcontext/beans-*.xml</param-value>
+    </context-param>
+
+    <listener>
+        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+    </listener>
+
+    <servlet>
+        <servlet-name>springExampleServlet</servlet-name>
+        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+
+    <servlet>
+        <servlet-name>PetClinicServlet</servlet-name>
+        <servlet-class>com.gg.example.springExample.web.PetClinicServlet</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>springExampleServlet</servlet-name>
+        <url-pattern>/mvc/*</url-pattern><!--
+        <init-param>
+            <param-name>contextConfigLocation</param-name>
+            <param-value>classpath*:/WEB_INF/*.servlet.xml</param-value>
+        </init-param>-->
+    </servlet-mapping>
+
+    <servlet-mapping>
+        <servlet-name>PetClinicServlet</servlet-name>
+        <url-pattern>/PetClinicServlet</url-pattern>
+    </servlet-mapping>
+
 </web-app>
+
